add docs; improve code
